--- a/LedCube/LedCube.vcxproj.filters
+++ b/LedCube/LedCube.vcxproj.filters
@@ -16,6 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="LedCube.ino" />
+    <None Include="Vector\Vector.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="__vm\.LedCube.vsarduino.h">
@@ -31,6 +34,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Init.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector\Vector.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex\Vertex.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
